# remote_module_sample

./: Cargo.toml  README.md
src/: lib.rs
